--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -1,5 +1,5 @@
 <header class="header">
-<h3 class="heading">Your profile has been saved as:</h3>
+<h3 class="heading">Please check your email for a confirmation link to activate your account:</h3>
 </header>
 <div class="content">
 <p><strong>Name:</strong><%= @provider.name %></p>
