set cucumber tests as they should be for the confirmation email so that I can now focus on the rspec

--- a/app/views/providers_mailer/register.html.haml
+++ b/app/views/providers_mailer/register.html.haml
@@ -6,7 +6,6 @@
     %p
       %strong Thanks for signing up!
     %p
-      Please click on the link below to confirm your account.
-    %p #{@provider.paypal_email}
+      = link_to 'Please click the link to verify your account.', @provider
     %p
       GravyTrain Team
