--- a/app/views/providers_mailer/register.text.erb
+++ b/app/views/providers_mailer/register.text.erb
@@ -2,6 +2,8 @@ Dear <%= @provider.name %>
 
 Thanks for registering!
 
-Please click here to confirm your account.
+Please click the link to verify your account.
+
+http://localhost:3000/providers/<%= @provider.id %>
 
 GravyTrain Team
