includeded verification process and tests, excluding token usuage

--- a/app/views/providers_mailer/register.text.erb
+++ b/app/views/providers_mailer/register.text.erb
@@ -4,6 +4,6 @@ Thanks for registering!
 
 Please click the link to verify your account.
 
-http://localhost:3000/providers/<%= @provider.id %>
+http://localhost:3000/providers/<%= @provider.id %>/confirm
 
 GravyTrain Team
