added confirmation of account via token

--- a/app/views/providers_mailer/register.html.haml
+++ b/app/views/providers_mailer/register.html.haml
@@ -6,6 +6,6 @@
     %p
       %strong Thanks for signing up!
     %p
-      = link_to 'Please click the link to verify your account.', confirm_provider_url(@provider)
+      = link_to 'Please click the link to verify your account.', confirm_provider_url(@provider, token: @provider.token)
     %p
       GravyTrain Team
