--- a/app/views/providers_mailer/register.text.erb
+++ b/app/views/providers_mailer/register.text.erb
@@ -4,6 +4,7 @@ Thanks for registering!
 
 Please click the link to verify your account.
 
-http://localhost:3000/providers/<%= @provider.id %>/confirm
+http://localhost:3000/providers/<%= @provider.id %>/confirm?token=<%= @provider.token %>
 
 GravyTrain Team
+
